--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
             </ul>
           </div>
         <button type="button" class="btn btn-outline-favoritos">Favoritos</button>
-        <form class="d-flex">
+        <form onsubmit="return false" class="d-flex">
             <input id="input-buscar-filme" type="search" placeholder="Buscar filme">
             <button id="btn-pesquisa" type="submit">Buscar</button>
         </form>
