--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="Logo-cineon"><img src="../Images/Logo CineOn.png" alt="Logo CineOn"></div>
-        <button type="button" class="btn btn-outline-home">Home</button>
+        <button type="button" class="btn btn-outline-home" src="./index.html">Home</button>
         <div class="dropdown">
             <button class="btn genero dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
               Gênero
@@ -41,6 +41,7 @@
             <div id="mostrar-filme">
 
             </div>
+            
         </div>
     </section>
         
