--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div id="Logo-cineon"><img src="../Images/Logo CineOn.png" alt="Logo CineOn"></div>
+        <div id="Logo-cineon"><img src="./Images/Logo CineOn.png" alt="Logo CineOn"></div>
         <button type="button" class="btn btn-outline-home" src="./index.html">Home</button>
         <div class="dropdown">
             <button class="btn genero dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
